# cowboy

./: .gitignore  AGENTS.md  Cargo.toml  Justfile  README.md  demo-config.toml
crates/agent/acp/: Cargo.toml
crates/agent/acp/src/: backend.rs  client.rs  lib.rs  messages.rs  test_util.rs
crates/agent/acp/src/transport/: mod.rs  stdio.rs  zellij.rs
crates/agent/acp/tests/: copilot_acp.rs  omp_acp.rs
crates/agent/acp/tests/support/: mod.rs
crates/agent/client/: Cargo.toml
crates/agent/client/src/: lib.rs  traits.rs  types.rs
crates/agent/client/tests/: agent_session_descriptor.rs
crates/log/: Cargo.toml
crates/log/src/: lib.rs
crates/tui/: Cargo.toml
crates/tui/animation/: Cargo.toml
crates/tui/animation/src/: lib.rs
crates/tui/app/: Cargo.toml
crates/tui/app/src/: app.rs  config.rs  lib.rs  main.rs  resolution.rs  run_summary.rs
crates/tui/app/src/app/: card.rs  commands.rs  events.rs  history.rs  input.rs  markup.rs  state.rs  styles.rs  tests.rs
crates/tui/app/src/app/controls/: chrome.rs  composer.rs  header.rs  mod.rs  status.rs  transcript.rs
crates/tui/app/tests/: resolve_cli.rs  runs_cli.rs
crates/tui/command-parser/: Cargo.toml
crates/tui/command-parser/src/: lib.rs
crates/tui/src/: app.rs  config.rs  lib.rs  main.rs
crates/tui/src/app/: commands.rs  events.rs  input.rs  markup.rs  state.rs  styles.rs  tests.rs
crates/tui/src/app/controls/: composer.rs  header.rs  status.rs  transcript.rs
crates/tui/terminal/: Cargo.toml
crates/tui/terminal/src/: lib.rs  unix.rs  windows.rs
crates/workflow/actions/: Cargo.toml
crates/workflow/actions/src/: agent.rs  ask_user.rs  command.rs  fail.rs  lib.rs  status.rs  suspend.rs  workflow.rs
crates/workflow/agent/: Cargo.toml
crates/workflow/agent/src/: error.rs  executor.rs  frontmatter.rs  lib.rs  prompt.rs
crates/workflow/catalog/: Cargo.toml
crates/workflow/catalog/src/: builtin.rs  error.rs  improvement.rs  lib.rs  loader.rs  source.rs
crates/workflow/catalog/src/workflows/: default.lua
crates/workflow/catalog/test_files/: fix.lua  notes.txt  plain.lua  review.lua
crates/workflow/catalog/test_files/nested/: lint.lua
crates/workflow/core/: Cargo.toml
crates/workflow/core/src/: action.rs  definition.rs  engine.rs  error.rs  ids.rs  lib.rs  state.rs  summary.rs  traits.rs
crates/workflow/engine/: Cargo.toml
crates/workflow/engine/src/: active_clock.rs  agent_resolver.rs  events.rs  input.rs  lib.rs  run_lock.rs  runner.rs  runtime.rs  runtime_dependencies.rs  system.rs  workflow.rs
crates/workflow/engine/test_files/: 00-demo.lua
crates/workflow/engine/test_files/agent/: 00-feature.lua
crates/workflow/engine/tests/: example_prompt_composition.rs
crates/workflow/lua/: Cargo.toml
crates/workflow/lua/src/: api.rs  convert.rs  error.rs  imports.rs  lib.rs  loader.rs  runtime.rs  sandbox.rs
crates/workflow/lua/test_files/: basic.lua  cyclic_review.lua  with_imports.lua
crates/workflow/lua/test_files/shared/: roles.lua
crates/workflow/store/: Cargo.toml
crates/workflow/store/src/: contract.rs  error.rs  hash.rs  lib.rs  redb_store.rs  schema.rs  sqlite_store.rs  tables.rs
docs/: architecture.md  module-map.md  workflow-authoring.md
docs/plans/: add_command_action_type.md  add_committer_agent_type.md  add_named_agent_resolver.md  add_system_context_to_lua_workflows.md  add_vim_style_tui_shortcuts.md  agent_response_watchdog_and_session_recovery.md  allow_concurrent_cowboy_instances_safely.md  allow_on_the_fly_prompts_during_active_runs.md  allow_typing_while_run_active.md  animated_running_status.md  call_workflows_from_workflow_actions.md  colocate_dev_loop_planning_documents.md  color_code_transcript_and_highlight_code.md  compact_transcript_metadata_layout.md  compact_tui_header_with_unicode_icons.md  configurable_mouse_scroll_speed.md  convert_remaining_tui_transcript_entries_to_cards.md  dev_loop_validation_guide_and_blocker_review.md  disable_inputbox_during_active_run.md  exclude_user_wait_time_from_elapsed_time.md  filter_runs_by_partial_id.md  fix_input_cursor_blinking.md  fix_inputbox_cursor_navigation.md  fix_small_terminal_transcript_cutoffs.md  fix_wrapped_input_composer_height.md  harden_blocked_status_for_all_workflows.md  implementation_review_reproducible_evidence.md  improve_resolve_field_input.md  improve_tui_with_omp_style_cards.md  include_docs_plans_in_committer_scope.md  initial_user_input_card_title_and_body.md  inputbox_state_colors.md  mouse_scroll_regions_and_transcript_scrollbar.md  move_command_arg_parsing_into_command_parser_crate.md  normalize_ask_user_as_step_output.md  pass_user_feedback_to_reviewer.md  passthrough_pathext_environment_variable_to_workflow.md  persist_tui_input_history.md  print_resume_hint_on_exit.md  recoverable_step_retry_and_manual_status_resolution.md  (+23 more)
docs/plans/acp_initialization_can_hang_workflow_steps_indefinitely/: plan.md  rca.md
docs/plans/agent_markdown_outputs_render_as_raw_text/: plan.md  rca.md
docs/plans/agent_response_markdown_renders_as_raw_text/: plan.md  rca.md
docs/plans/ask_for_input_hides_full_output/: plan.md  rca.md
docs/plans/blocker_answer_not_preserved_as_user_feedback/: plan.md  rca.md
docs/plans/blocker_reviewer_recovery_loops_on_missing_evidence/: investigator_repro_preimplementation.patch  plan.md  rca.md
docs/plans/card_content_is_cut_off/: plan.md  rca.md
docs/plans/card_mouse_selection_shows_two_highlights/: plan.md  rca.md
docs/plans/card_ui_collapses_content/: plan.md  rca.md
docs/plans/card_ui_should_take_full_width/: plan.md  rca.md
docs/plans/command_action_drops_required_environment_variables/: plan.md  rca.md
docs/plans/confusing_ui_task_counter/: plan.md  rca.md
docs/plans/cowboy_hangs_on_empty_acp_selector_turns/: plan.md  rca.md
docs/plans/ctrl_shift_enter_submits_on_windows/: plan.md  rca.md
docs/plans/cursor_blinks_rapidly_in_running_state/: investigator_records.json  plan.md  rca.md  todo05_baseline.sh
scripts/: required-sqlite-tests.tsv  run-exact-test.sh  run-required-sqlite-tests.sh  verify-sqlite-store.sh
(+105 files in other folders)
