[workspace]
members = ["crates/agent/acp", "crates/agent/client", "crates/log", "crates/workflow/actions", "crates/workflow/agent", "crates/workflow/catalog", "crates/workflow/core", "crates/workflow/engine", "crates/workflow/lua", "crates/workflow/store", "crates/tui/app", "crates/tui/command-parser"]
default-members = ["crates/agent/acp", "crates/agent/client", "crates/log", "crates/workflow/actions", "crates/workflow/agent", "crates/workflow/catalog", "crates/workflow/core", "crates/workflow/engine", "crates/workflow/lua", "crates/workflow/store", "crates/tui/app", "crates/tui/command-parser"]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.89"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
base64 = "0.22"
async-trait = "0"
chrono = "0"
fs2 = "0"
parking_lot = "0"
serde = "1"
serde_json = "1"
tempfile = "3"
thiserror = "2"
tokio = "1"
tracing = "0"

cowboy-agent-acp = { path = "crates/agent/acp" }
cowboy-agent-client = { path = "crates/agent/client" }
cowboy-log = { path = "crates/log" }
cowboy-command-parser = { path = "crates/tui/command-parser" }
cowboy-workflow-agent = { path = "crates/workflow/agent" }
cowboy-workflow-core = { path = "crates/workflow/core" }
cowboy-workflow-lua = { path = "crates/workflow/lua" }
cowboy-workflow-store = { path = "crates/workflow/store" }
