[package]
name = "cowboy-log"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "File-based diagnostic logging setup for Cowboy"

[dependencies]
tracing = "0.1"
time = "0.3"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
