[package]
name = "cowboy-log"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "File-based diagnostic logging setup for Cowboy"

[dependencies]
tracing.workspace = true
time = "0"
tracing-appender = "0"
tracing-subscriber = { version = "0", features = ["env-filter", "fmt"] }
