[package]
name = "cowboy"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Workflow-first terminal UI for Cowboy"

[dependencies]
cowboy-workflow-engine = { path = "../workflow/engine" }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
crossterm = "0.29"
dirs = "6"
ratatui = { version = "0.29", features = ["unstable-rendered-line-info"] }
unicode-width = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
toml = "1"
cowboy-log = { path = "../log" }
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
