[package]
name = "cowboy"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Workflow-first terminal UI for Cowboy"

[dependencies]
cowboy-workflow-engine = { path = "../workflow/engine" }
anyhow.workspace = true
chrono = { workspace = true, features = ["serde"] }
clap = { version = "4", features = ["derive"] }
crossterm = "0"
fs2.workspace = true
dirs = "6"
ratatui = { version = "0", features = ["unstable-rendered-line-info"] }
tui-input = { version = "0", default-features = false, features = ["crossterm"] }
unicode-width = "0"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
syntect = "5"
shlex = "2"
tokio = { workspace = true, features = ["full"] }
toml = "1"
cowboy-log.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
