[package]
name = "cowboy-agent-acp"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "ACP agent client implementation for Cowboy"

[[bin]]
name = "acp-chat"
path = "src/bin/acp-chat.rs"

[dependencies]
cowboy-agent-client = { path = "../client" }
anyhow = "1"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["io-util", "macros", "process", "rt", "time"] }
tracing = "0.1"

[dev-dependencies]
parking_lot = "0.12"
tempfile = "3"
