[package]
name = "cowboy-agent-client"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Agent client interfaces for Cowboy"

[dependencies]
anyhow = "1"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
