[package]
name = "cowboy-agent-client"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Agent client interfaces for Cowboy"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
