[package]
name = "cowboy"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Workflow-first terminal UI for Cowboy"

[dependencies]
base64.workspace = true
cowboy-command-parser.workspace = true
cowboy-tui-terminal.workspace = true
cowboy-tui-animation.workspace = true
cowboy-workflow-engine = { path = "../../workflow/engine" }
anyhow.workspace = true
chrono = { workspace = true, features = ["serde"] }
crossterm.workspace = true
fs2.workspace = true
dirs = "6"
pulldown-cmark = "0.13"
ratatui = { version = "0", features = ["unstable-rendered-line-info"] }
tui-input = { version = "0", default-features = false, features = ["crossterm"] }
unicode-width.workspace = true
unicode-segmentation = "1"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
syntect = "5"
tokio = { workspace = true, features = ["full"] }
toml = "1"
cowboy-log.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
cowboy-workflow-core.workspace = true
cowboy-workflow-store.workspace = true
