[package]
name = "cowboy-workflow-actions"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Workflow action runners and dispatcher for Cowboy"

[dependencies]
cowboy-workflow-core.workspace = true
cowboy-workflow-agent.workspace = true
async-trait.workspace = true
chrono = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
