[package]
name = "cowboy-workflow-agent"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Agent action execution helpers for Cowboy workflows"

[dependencies]
cowboy-agent-client = { path = "../../agent/client" }
cowboy-agent-acp = { path = "../../agent/acp" }
cowboy-workflow-core = { path = "../core" }
cowboy-workflow-store = { path = "../store" }
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
tracing = "0.1"
tokio = { version = "1", features = ["macros", "rt", "sync"] }

[dev-dependencies]
parking_lot = "0.12"
tokio = { version = "1", features = ["macros", "rt"] }
