[package]
name = "cowboy-workflow-agent"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Agent action execution helpers for Cowboy workflows"

[dependencies]
cowboy-agent-client.workspace = true
cowboy-agent-acp.workspace = true
cowboy-workflow-core.workspace = true
cowboy-workflow-store.workspace = true
anyhow.workspace = true
async-trait.workspace = true
chrono = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_yaml = "0"
thiserror.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["macros", "rt", "sync"] }

[dev-dependencies]
parking_lot.workspace = true
tokio = { workspace = true, features = ["macros", "rt"] }
