[package]
name = "cowboy-workflow-catalog"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Built-in and filesystem workflow catalog loading for Cowboy"

[dependencies]
cowboy-workflow-core.workspace = true
cowboy-workflow-lua.workspace = true
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
