[package]
name = "cowboy-workflow-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Workflow domain model and core traits for Cowboy"

[dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
parking_lot = "0.12"
tokio = { version = "1", features = ["macros", "rt"] }
