[package]
name = "cowboy-workflow-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Workflow domain model and core traits for Cowboy"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
parking_lot.workspace = true
tokio = { workspace = true, features = ["macros", "rt"] }
