[package]
name = "cowboy-workflow-engine"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Workflow runtime orchestration adapters for Cowboy"

[dependencies]
cowboy-agent-client = { path = "../../agent/client" }
cowboy-agent-acp = { path = "../../agent/acp" }
cowboy-workflow-core = { path = "../core" }
cowboy-workflow-agent = { path = "../agent" }
cowboy-workflow-actions = { path = "../actions" }
cowboy-workflow-catalog = { path = "../catalog" }
cowboy-workflow-store = { path = "../store" }
cowboy-workflow-lua = { path = "../lua" }
cowboy-log = { path = "../../log" }
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "macros", "rt"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
parking_lot = "0.12"
tempfile = "3"
