[package]
name = "cowboy-workflow-engine"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Workflow runtime orchestration adapters for Cowboy"

[dependencies]
cowboy-agent-client.workspace = true
cowboy-agent-acp.workspace = true
cowboy-workflow-core.workspace = true
cowboy-workflow-agent.workspace = true
cowboy-workflow-actions = { path = "../actions" }
cowboy-workflow-catalog = { path = "../catalog" }
cowboy-workflow-store.workspace = true
cowboy-workflow-lua.workspace = true
cowboy-log.workspace = true
anyhow.workspace = true
async-trait.workspace = true
chrono = { workspace = true, features = ["serde"] }
fs2.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["sync", "macros", "rt"] }
tracing.workspace = true
uuid = { version = "1", features = ["v4", "serde"] }
whoami = "1"

[dev-dependencies]
parking_lot.workspace = true
tempfile.workspace = true
