[package]
name = "cowboy-workflow-lua"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Sandboxed Lua workflow loader for Cowboy"

[dependencies]
cowboy-workflow-core = { path = "../core" }
async-trait = "0.1"
mlua = { version = "0.11", features = ["lua54", "vendored"] }
parking_lot = "0.12"
serde_json = "1"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
