[package]
name = "cowboy-workflow-lua"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Sandboxed Lua workflow loader for Cowboy"

[dependencies]
cowboy-workflow-core.workspace = true
async-trait.workspace = true
mlua = { version = "0", features = ["lua54", "vendored"] }
parking_lot.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
