[package]
name = "cowboy-workflow-store"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "redb-backed workflow run store for Cowboy"

[dependencies]
cowboy-workflow-core = { path = "../core" }
chrono = { version = "0.4", features = ["serde"] }
blake3 = "1"
redb = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3"
