[package]
name = "cowboy-workflow-store"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "redb-backed workflow run store for Cowboy"

[dependencies]
cowboy-workflow-core.workspace = true
chrono = { workspace = true, features = ["serde"] }
blake3 = "1"
redb = "4"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
chrono = { workspace = true, features = ["serde"] }
tempfile.workspace = true
