[package]
name = "cowboy-workflow-store"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "SQLite-backed workflow store for Cowboy"

[dependencies]
cowboy-workflow-core.workspace = true
async-trait.workspace = true
chrono = { workspace = true, features = ["serde"] }
blake3 = "1"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["fs", "macros", "rt", "sync", "time"] }
tracing.workspace = true

[dev-dependencies]
chrono = { workspace = true, features = ["serde"] }
tempfile.workspace = true
